--- a/fc/css/styles.css
+++ b/fc/css/styles.css
@@ -82,7 +82,7 @@ padding-right: 15px;
 
 
 #menu-tile, #specials-tile, #map-tile ,#added-tile {
-	height: 250px;
+	height: 100%;
 	width: 100%;
 	margin-bottom: 15px;
 	position: relative;
